# app/Controllers/Recipes/GetRecipes.php
@@ -18,21 +18,24 @@ use Psr\Http\Message\ServerRequestInterface;
  *     @SWG\Parameter(
  *         name="page",
  *         in="query",
- *         description="The result page",
+ *         description="Page",
  *         required=false,
  *         type="integer"
  *     ),
  *     @SWG\Parameter(
  *         name="per_page",
  *         in="query",
- *         description="The page size",
+ *         description="Page size",
  *         required=false,
  *         type="integer"
  *     ),
  *     @SWG\Response(
  *         response=206,
  *         description="A paginated array of Recipes",
- *         @SWG\Schema(type="array", @SWG\Items(ref="#/definitions/Recipe")),
+ *         @SWG\Schema(
+ *             @SWG\Property(property="data", type="array", @SWG\Items(ref="#/definitions/RecipeApiResponse")),
+ *             @SWG\Property(property="meta", type="object", ref="#/definitions/Meta"),
+ *         ),
  *         @SWG\Header(header="X-Powered-By", type="string", description=";)"),
  *         @SWG\Header(header="X-Response-Time", type="string", description="282.263ms"),
  *     ),
